2018-10-21    <kennethj@gagarin.uit.no>
    * generate_paga_persons.py Updated to handle UTF-8 from FS

2018-10-21    <kennethj@gagarin.uit.no>
    * import_PAGA.py Updated to handle UTF-8 from FS

2018-10-20    <kennethj@gagarin.uit.no>
    * merge_xml_files.py Updated to handle UTF-8 from FS
2018-10-20    <kennethj@gagarin.uit.no>
    * import_FS.py      updated to handle UTF-8 from FS.

2018-10-18    <kennethj@gagarin.uit.no>
    * generate_OU.py	Updated to handle UTF-8 from FS
2018-09-13    <cerebrum@gagarin.uit.no>
    * import_PAGA.py    We cannot import persons from paga where the last 5 digits are set to 00000 (non-norwegians missing propper fnr).
                        There are 2 reasons for this. 1: the resulting 11 digit fnr is not unique. 2: In some cases giving an existing username to a returning user, will give the wrong username. in reallity the username 
                        returned actually belongs to someone else.
2018-08-16    <cerebrum@gagarin.uit.no>
    * process_uit_email.py (get_existing_email) rewrote how we collect already existing email addresses.
            The previous version was bloated and took too much time. The new version collects existing email addresses
            directly from the email table, not caring if the owning account, is expired or what affiliation it might have.

    *   process_uit_email.py (get_cn_addr) we will not try ALL alternatives when looking for a free email address, and not
            only the first alternative as was the case until now. 


2018-06-26    <cerebrum@gagarin.uit.no>
    * user_expire.py is now to be run on cleomedes. activate send_mail function

2018-06-19    <cerebrum@gagarin.uit.no>
	* export_ad (get_ouinfo): this function will not return false if the ou_id is quarantined
			    rewrote script to use the get_name_with_language() function when getting ou names. 					

2018-06-08    <cerebrum@gagarin.uit.no>
